# azure-iot-edge

./: CMakeLists.txt
core/devdoc/: gateway_application_hld.md  gateway_dmclient_hld.md
core/inc/: message.h
core/tests/gateway_e2e/: dependencies.cmake
core/tests/testtools/iothub_test/: dependencies.cmake
jenkins/: inteledison_c.sh  linux_c.sh  osx_c.sh  raspberrypi_c.sh  ubuntu-14.04_c.sh  windows_c.cmd  windriver_linux_c.sh
modules/: CMakeLists.txt  dependencies.cmake
modules/ble/src/: ble_hl.c
modules/common/: messageproperties.h
modules/dm_worker/: CMakeLists.txt  README.md
modules/dm_worker/inc/: dm_worker.h
modules/dm_worker/src/: dm_worker.c
modules/dmhub/: CMakeLists.txt  README.md
modules/dmhub/inc/: dmhub.h  dmhub_hl.h
modules/dmhub/src/: dmhub.c  dmhub_hl.c
modules/identitymap/src/: identitymap.c
modules/simulated_device/src/: simulated_device.c
prototype/module_validator/: module_validator.js
proxy/outprocess/src/module_loaders/: outprocess_module.c
samples/ble_gateway/ble_printer/src/: ble_printer.c
tools/: build.cmd  build.sh
v1/tools/toolchain/windriver/cmake/: FindCURL.cmake  FindOpenSSL.cmake
